<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/home"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login">

    <include
        layout="@layout/progressbar"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="230dp"
            android:layout_height="200dp"
            android:src="@drawable/new_logo" />

        <LinearLayout style="@style/ll_new_default">

            <EditText
                android:id="@+id/user_id"
                style="@style/et_new_default"
                android:autofillHints="@string/user_id"
                android:textAllCaps="false"
                android:hint="@string/user_id"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete" />

        </LinearLayout>

        <LinearLayout style="@style/ll_new_default">

            <com.google.android.material.textfield.TextInputLayout
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    style="@style/et_new_default"
                    android:autofillHints="@string/password"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout style="@style/ll_new_default">

            <Button
                android:id="@+id/login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_btn_login"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>